# air_pollution_identification_app

./: .env  .gitignore  README.md  docker-compose-windows.yml  docker-compose.yml  windows.env
influx-docker/: .dockerignore  Dockerfile  backup_influxdb.sh  influxDBWorkBench.bat  influxdb.conf  initialDb.sh
postgres-docker/: .pgpass  Dockerfile  dump_data.sh  init_db.sh  pg_hba.conf  restore_data.sh  restore_data_init.sh
streamlit_service/: Dockerfile  pyproject.toml  requirements.txt
streamlit_service/DIM/: Agent.py  Environment.py  NN_Model.py  gral_methods.py  parsers.py
streamlit_service/DIM/GralService/: .env  main.py  processing.py  processing_coords.py  request_functions.py  starter_scripts.py
streamlit_service/DIM/GralService/power_files/: Sourcegroups.txt  calculation_filenames.txt
streamlit_service/DIM/Simulators/: emissions.py  learn.py  weather.py
streamlit_service/web_app/: app.py  config.ini
streamlit_service/web_app/app_pages/: page_data.py  page_fit.py  page_grid.py  page_identify.py  page_main.py  page_params.py  page_run_models.py
streamlit_service/web_app/app_pages/models/: BaseModel.py  DayFeaturesLR.py  DayFeaturesNN.py  EMLR.py  EMNN.py  HW.py  NNSelector.py  NaiveSelector.py  SARIMA.py  SDaysAVR.py  SDaysSelector.py  STA.py  TDaysAVR.py  Utils.py
streamlit_service/web_app/data/: Asources.txt  Meteo_20min_step.met  Psources.txt  Sourcegroups.txt  analyzers_loaded_coords.txt  forecast_value_sample_ch4.xlsx  forecast_value_sample_ch4_28_09.xlsx  forecast_value_sample_weather.xlsx  nn_model_sample.h5
(+2 files in other folders)
